--- a/index.html
+++ b/index.html
@@ -3,27 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diamond Idle Mine</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <title>Idle Diamond Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="app">
-        <div class="stats">
-            <h1>💎 <span id="balance">0</span></h1>
-            <p>Доход: +<span id="pps">0</span>/сек</p>
+    <div class="game-container">
+        <h1>Твои Алмазы: <span id="score">0</span></h1>
+        
+        <div id="diamond" class="diamond-clicker">
+            <img src="https://img.icons8.com/emoji/96/gem-stone-emoji.png" alt="Diamond">
         </div>
 
-        <div class="mine-section">
-            <button id="main-clicker">⛏️ КОПАТЬ!</button>
-        </div>
-
-        <div class="shop">
-            <h3>Магазин бустов</h3>
-            <button onclick="buyBoost(1, 10)">Купить кирку (+1/с) — 💰10</button>
-            <button onclick="buyBoost(5, 50)">Купить дрель (+5/с) — 💰50</button>
-        </div>
+        <p>Нажимай на алмаз, чтобы копать!</p>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
