--- a/index.html
+++ b/index.html
@@ -3,64 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Diamond Pickaxe Game</title>
+    <title>Mine Bot</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="mine-bg"></div>
-    
-    <div class="app">
-        <div class="user-bar glass">
-            <img src="https://cdn-icons-png.flaticon.com/512/147/147144.png" class="avatar">
-            <div id="user-name">Загрузка...</div>
-        </div>
-
-        <div class="score-container">
-            <h1><span id="score">0</span> 💎</h1>
-            <div class="subtitle">Уровень кирки: <span id="level">1</span></div>
-        </div>
-
-        <div class="tabs-nav glass">
-            <button class="tab-link active" onclick="showTab('mine', this)">⛏️ Шахта</button>
-            <button class="tab-link" onclick="showTab('shop', this)">🚀 Бусты</button>
-            <button class="tab-link" onclick="showTab('refs', this)">👥 Друзья</button>
-        </div>
-
-        <div id="mine" class="tab-content active">
-            <div class="click-tile glass" id="click-zone">
-                <div class="pickaxe-wrapper" id="pickaxe-btn">
-                    <img src="https://cdn-icons-png.flaticon.com/512/1004/1004658.png" alt="Pickaxe">
+    <div class="glass-overlay">
+        <div class="app-container">
+            <div class="header">
+                <div class="balance-info">
+                    <p>Diamonds 💎</p>
+                    <h1 id="score">0</h1>
                 </div>
-                <div class="id-tag">ID: <span id="display-id">...</span></div>
-            </div>
-            <button class="action-btn mine-btn">РАБОТАТЬ В ШАХТЕ</button>
-        </div>
-
-        <div id="shop" class="tab-content">
-            <div class="glass card">
-                <h3>Улучшение стали</h3>
-                <div class="row">
-                    <span>Сила клика +1</span>
-                    <button onclick="buyUpgrade()" class="buy-btn"><span id="upgradeCost">50</span> 💎</button>
+                <div class="user-chip glass">
+                    <span id="user-name">Miner</span>
+                    <img src="https://cdn-icons-png.flaticon.com/512/147/147144.png" class="avatar">
                 </div>
             </div>
-        </div>
 
-        <div id="refs" class="tab-content">
-            <div class="glass card">
-                <h3>Приглашено друзей: <span id="ref-count">0</span></h3>
-                <div id="ref-list" class="scroll-list">
-                    <p style="opacity: 0.5;">Тут будет список твоих друзей...</p>
+            <div class="tabs-nav glass">
+                <button class="tab-link active" onclick="showTab('mine', this)">⛏️ Mine</button>
+                <button class="tab-link" onclick="showTab('shop', this)">🚀 Бусты</button>
+                <button class="tab-link" onclick="showTab('refs', this)">👥 Друзья</button>
+            </div>
+
+            <div id="mine" class="tab-content active">
+                <div class="click-card glass">
+                    <div class="pickaxe-zone" id="click-zone">
+                        <div class="pickaxe-main" id="pickaxe-btn">
+                            <img src="https://i.ibb.co/LzfNf0p/image-7d1561-removebg-preview.png" alt="Diamond Pickaxe">
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <div class="stats">
+                            <span>Level: <b id="level">1</b></span>
+                            <span>ID: <b id="display-id">...</b></span>
+                        </div>
+                        <button class="action-btn">КОПАТЬ!</button>
+                    </div>
                 </div>
             </div>
-            <button class="action-btn ref-btn" onclick="inviteFriend()">🤝 Пригласить друга (+1000 💎)</button>
+
+            <div id="shop" class="tab-content">
+                <div class="glass menu-card">
+                    <h3>Улучшение кирки</h3>
+                    <div class="upgrade-item">
+                        <p>Увеличить мощь клика (+1)</p>
+                        <button onclick="buyUpgrade()" class="buy-btn"><span id="upgradeCost">50</span> 💎</button>
+                    </div>
+                </div>
+            </div>
+
+            <div id="refs" class="tab-content">
+                <div class="glass menu-card">
+                    <h3>Ваша команда: <span id="ref-count">0</span></h3>
+                    <div id="ref-list" class="friends-list">
+                        <p style="opacity:0.5; text-align:center;">Список пуст...</p>
+                    </div>
+                </div>
+                <button class="invite-btn" onclick="inviteFriend()">🤝 Позвать друга (+1000 💎)</button>
+            </div>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
