--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="stats">
-                            <span>Уровень: <b id="level">1</b></span>
+                            <span>LVL: <b id="level">1</b></span>
                             <span>ID: <b id="display-id">...</b></span>
                         </div>
                         <button class="action-btn small-mine glass" onclick="doClick()">МАЙН</button>
@@ -49,7 +49,7 @@
                 <div class="glass menu-card">
                     <h3>Прокачка</h3>
                     <div class="upgrade-item">
-                        <p>Сила клика +1</p>
+                        <p>Клик +1</p>
                         <button onclick="buyUpgrade()" class="buy-btn glass"><span id="upgradeCost">50</span> 💎</button>
                     </div>
                 </div>
@@ -57,16 +57,17 @@
 
             <div id="refs" class="tab-content">
                 <div class="glass menu-card">
-                    <h3>Команда: <span id="ref-count">0</span></h3>
+                    <h3>Друзья: <span id="ref-count">0</span></h3>
                     <div id="ref-list" class="friends-list"></div>
                 </div>
-                <button class="invite-btn glass" onclick="inviteFriend()">🤝 Пригласить друга (+1000 💎)</button>
+                <button class="invite-btn glass" onclick="inviteFriend()">🤝 Пригласить (+1000 💎)</button>
             </div>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
