--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
             <div id="shop" class="tab-content">
                 <div class="glass menu-card">
-                    <h3>Прокачка</h3>
+                    <h3>Прокачка клика</h3>
                     <div class="upgrade-item">
-                        <p>Клик +1</p>
+                        <p>Мощность +1</p>
                         <button onclick="buyUpgrade()" class="buy-btn glass"><span id="upgradeCost">50</span> 💎</button>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
 
             <div id="refs" class="tab-content">
                 <div class="glass menu-card">
-                    <h3>Друзья: <span id="ref-count">0</span></h3>
+                    <h3>Твои рефералы: <span id="ref-count">0</span></h3>
                     <div id="ref-list" class="friends-list"></div>
                 </div>
                 <button class="invite-btn glass" onclick="inviteFriend()">🤝 Пригласить (+1000 💎)</button>
@@ -67,7 +67,6 @@
     <script src="script.js"></script>
 </body>
 </html>
-
 
 
 
